// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UploadProgressBar should render 1`] = `
<div
  className=" undefined progress"
>
  <div
    aria-valuemax={100}
    aria-valuemin="0"
    aria-valuenow={0}
    className="progress-bar bg-success"
    role="progressbar"
    style={
      Object {
        "width": "0%",
      }
    }
  >
    <span
      className="sr-only"
    >
      0
      % Complete
    </span>
  </div>
</div>
`;

exports[`UploadProgressBar should render error 1`] = `
<span
  className="text-danger"
>
  File upload rejected
</span>
`;

exports[`UploadProgressBar should render password verification button 1`] = `
Array [
  <span
    className="text-danger"
  >
    Encrypted files require a password
  </span>,
  <div
    className="pwRequired"
  >
    <button
      aria-label={null}
      className="btn btn-primary btn-sm"
      onClick={[Function]}
      type="button"
    >
      Enter password
    </button>
  </div>,
]
`;

exports[`UploadProgressBar should render progress 1`] = `
<div
  className=" undefined progress"
>
  <div
    aria-valuemax={100}
    aria-valuemin="0"
    aria-valuenow={50}
    className="progress-bar bg-success"
    role="progressbar"
    style={
      Object {
        "width": "50%",
      }
    }
  >
    <span
      className="sr-only"
    >
      50
      % Complete
    </span>
  </div>
</div>
`;

exports[`UploadProgressBar should render success 1`] = `
<div
  className=" progress-complete progress"
>
  <div
    aria-valuemax={100}
    aria-valuemin="0"
    aria-valuenow={100}
    className="progress-bar bg-success"
    role="progressbar"
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <span
      className="sr-only"
    >
      100
      % Complete
    </span>
  </div>
</div>
`;
